--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,62 +1,65 @@
-
 [workspace]
-members = ["demo"]
-resolver = "3"
+members  = ["demo"]
+resolver = "2"
 
 [workspace.package]
-rust-version = "1.88"
-edition = "2024"
-license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/egui-snarl"
-repository = "https://github.com/zakarumych/egui-snarl"
+edition       = "2024"
+license       = "MIT OR Apache-2.0"
+repository    = "https://github.com/zakarumych/egui-snarl"
+rust-version  = "1.88"
 
 [workspace.dependencies]
-egui = { version = "0.33" }
-eframe = { version = "0.33" }
+eframe      = { version = "0.33" }
+egui        = { version = "0.33" }
 egui_extras = { version = "0.33" }
-syn = { version = "2" }
-serde = { version = "1" }
-serde_json = { version = "1" }
+serde       = { version = "1" }
+serde_json  = { version = "1" }
+syn         = { version = "2" }
 
-egui-probe = { version = "0.10.0" }
-egui-scale = { version = "0.3.0" }
+egui-probe           = { version = "0.10.0" }
+egui-scale           = { version = "0.3.0" }
 wasm-bindgen-futures = "0.4"
-web-sys = "0.3.81"
+web-sys              = "0.3.81"
 
 [package]
-name = "egui-snarl"
-version = "0.9.0"
-edition.workspace = true
-rust-version.workspace = true
-license.workspace = true
+categories              = ["gui", "visualization"]
+description             = "Node-graphs for egui"
 documentation.workspace = true
-repository.workspace = true
-description = "Node-graphs for egui"
-readme = "README.md"
-keywords = ["egui", "node", "graph", "ui", "node-graph"]
-categories = ["gui", "visualization"]
+edition.workspace       = true
+keywords                = ["egui", "node", "graph", "ui", "node-graph"]
+license.workspace       = true
+name                    = "egui-snarl"
+readme                  = "README.md"
+repository.workspace    = true
+rust-version.workspace  = true
+version                 = "0.9.0"
 
 [features]
 serde = ["dep:serde", "egui/serde", "slab/serde"]
 
 [dependencies]
 egui.workspace = true
-slab = { version = "0.4" }
-serde = { workspace = true, features = ["derive"], optional = true }
-smallvec = { version = "1.15", features = ["const_new"] }
+serde          = { workspace = true, features = ["derive"], optional = true }
+slab           = { version = "0.4" }
+smallvec       = { version = "1.15", features = ["const_new"] }
 
-egui-probe = { workspace = true, features = ["derive"], optional = true }
+egui-probe           = { workspace = true, features = ["derive"], optional = true }
 egui-scale.workspace = true
 
 [dev-dependencies]
-eframe = { workspace = true, features = ["serde", "persistence"] }
-egui_extras = { workspace = true, features = ["all_loaders"] }
+eframe               = { workspace = true, features = ["serde", "persistence"] }
+egui_extras          = { workspace = true, features = ["all_loaders"] }
+rusty-hook           = "^0.11.2"
 serde_json.workspace = true
-syn = { workspace = true, features = ["extra-traits"] }
+syn                  = { workspace = true, features = ["extra-traits"] }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-futures.workspace = true
 
 [[example]]
-name = "demo"
+name              = "demo"
 required-features = ["serde", "egui-probe"]
+
+[package.metadata.cargo-shear]
+ignored = ["rusty-hook"]
