chore(rebrand): phase 1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ members  = ["demo"]
 resolver = "2"
 
 [workspace.package]
-documentation = "https://docs.rs/egui-snarl"
+documentation = "https://docs.rs/egui-treeize"
 edition       = "2024"
 license       = "MIT OR Apache-2.0"
-repository    = "https://github.com/zakarumych/egui-snarl"
-rust-version  = "1.88"
+repository    = "https://github.com/alexzhang1030/egui-treeize"
+rust-version  = "1.91.1"
 
 [workspace.dependencies]
 eframe      = { version = "0.33" }
@@ -23,17 +23,17 @@ wasm-bindgen-futures = "0.4"
 web-sys              = "0.3.81"
 
 [package]
-categories              = ["gui", "visualization"]
-description             = "Node-graphs for egui"
+categories              = ["gui", "visualization", "tree", "graph"]
+description             = "Tree-like graph visualization for egui"
 documentation.workspace = true
 edition.workspace       = true
-keywords                = ["egui", "node", "graph", "ui", "node-graph"]
+keywords                = ["egui", "tree", "graph", "ui", "tree-graph"]
 license.workspace       = true
-name                    = "egui-snarl"
+name                    = "egui-treeize"
 readme                  = "README.md"
 repository.workspace    = true
 rust-version.workspace  = true
-version                 = "0.9.0"
+version                 = "0.1.0"
 
 [features]
 serde = ["dep:serde", "egui/serde", "slab/serde"]
